--- a/nf.cabal
+++ b/nf.cabal
@@ -18,5 +18,5 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Data.NF, Data.NF.Internal
   other-extensions:    Safe, CPP
-  build-depends:       base, deepseq
+  build-depends:       base >= 2 && <= 4, deepseq
   default-language:    Haskell2010
