--- a/nf.cabal
+++ b/nf.cabal
@@ -1,5 +1,5 @@
 name:                nf
-version:             1.0.0.0
+version:             1.0.0.1
 synopsis:            NF data type to statically enforce normal form 
 description:         This package provides a data type NF representing
                      data which has been evaluated to normal form.  This
@@ -18,5 +18,5 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Data.NF, Data.NF.Internal
   other-extensions:    Safe, CPP
-  build-depends:       base >= 2 && <= 4, deepseq
+  build-depends:       base >= 2 && < 5, deepseq
   default-language:    Haskell2010
