--- a/nf.cabal
+++ b/nf.cabal
@@ -16,6 +16,6 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Data.NF, Data.NF.Internal
+  exposed-modules:     Data.NF, Data.NF.Internal, Data.DontForce
   build-depends:       base >= 2 && < 5, deepseq >= 1.1
   default-language:    Haskell2010
