--- a/nf.cabal
+++ b/nf.cabal
@@ -17,5 +17,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Data.NF, Data.NF.Internal
+  if impl(ghc >= 7.8)
+    exposed-modules:   Data.NF.Coercion
   build-depends:       base >= 2 && < 5, deepseq >= 1.1
   default-language:    Haskell2010
+  other-extensions:    CPP, DeriveDataTypeable
